# analysis_pet_shop

./: .gitignore  pyproject.toml
analysis_pet_shop/: utils_date.py  utils_files.py  utils_graphics.py  utils_import.py  utils_prepared_data.py  utils_statistics.py
notebooks/: Data_Prepared.ipynb  README.md
